fixes for forms jumping due to translate3d not supported well in android 2.*

--- a/themes/css/jqtouch.css
+++ b/themes/css/jqtouch.css
@@ -1542,7 +1542,7 @@ body {
   list-style-type: none;
   overflow: hidden;
   padding: 10px;
-  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform: translate(0, 0);
   /* expensive way to avoid flickr */
 }
 /* line 253, ../scss/include/_skeleton.scss */
